First draft of Huffman tree creation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "compare": "c",
         "cstdint": "c",
         "stdint.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "sstream": "cpp"
     }
 }
