Add a small test of io_uring

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,9 +1,9 @@
 
-# set(EXECUTABLE "Run")
-# add_executable(${EXECUTABLE} Run.cpp)
-# target_link_libraries(${EXECUTABLE} ${LIBRARY})
-# set_target_properties(${EXECUTABLE}
-#     PROPERTIES 
-#     LINKER_LANGUAGE CXX
-#     RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/../bin
-# )
+set(EXECUTABLE "io_uring_test")
+add_executable(${EXECUTABLE} io_uring_test.c)
+target_link_libraries(${EXECUTABLE} ${LIBRARY} uring)
+set_target_properties(${EXECUTABLE}
+    PROPERTIES 
+    LINKER_LANGUAGE C
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/../bin
+)
