First working io_uring server! Might have some memory bugs however

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "gheap.h": "c",
-        "gstack.h": "c"
+        "gstack.h": "c",
+        "unistd.h": "c"
     }
 }
