Add an implementation of a circular buffer that uses address space doubling

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,6 +14,11 @@ add_executable(${TEST} btree.cpp)
 target_link_libraries(${TEST} PRIVATE ${CTOOLS_LIB} GTest::gtest_main)
 gtest_discover_tests(${TEST})
 
+set(TEST "T-cbuf")
+add_executable(${TEST} cbuf.cpp)
+target_link_libraries(${TEST} PRIVATE ${CTOOLS_LIB} GTest::gtest_main)
+gtest_discover_tests(${TEST})
+
 set(TEST "T-huffman")
 add_executable(${TEST} huffman.cpp)
 target_link_libraries(${TEST} PRIVATE ${CTOOLS_LIB} GTest::gtest_main)
