Add first draft of a radix tree
The same story here as with the trie. I am going to use it in my blackhole project first, to get some ideas on how to improve the function api

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -16,3 +16,12 @@ set_target_properties(${EXECUTABLE}
     LINKER_LANGUAGE C
     RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/../bin
 )
+
+set(EXECUTABLE "radix_test")
+add_executable(${EXECUTABLE} radix_test.c)
+target_link_libraries(${EXECUTABLE} ${CTOOLS_LIB})
+set_target_properties(${EXECUTABLE}
+    PROPERTIES 
+    LINKER_LANGUAGE C
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/../bin
+)
