Sophisticate packaging of the library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,45 +4,44 @@ if(${CMAKE_VERSION} VERSION_LESS 3.12)
     cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
 endif()
 
-project(Temp_project
-    VERSION 0.1
-    DESCRIPTION "An example project."
+set(PROJECT_NAME "ctools")
+project(${PROJECT_NAME}
+    VERSION 0.0.1
+    DESCRIPTION "My personal C toolkit"
     LANGUAGES CXX C)
-
-enable_testing()
 
 
 set(CMAKE_PDB_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/pdb)
 
 
-
-set(CTOOLS_LIB "ctools")
-add_library(${CTOOLS_LIB} STATIC)
-target_include_directories(${CTOOLS_LIB} PUBLIC include)
-set_target_properties(${CTOOLS_LIB}
-    PROPERTIES 
-    LINKER_LANGUAGE C
-    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/../bin
-)
-
-
-
-# Add Google C++ Testing Framework as part of this project
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  GIT_REPOSITORY https://github.com/google/googletest.git
-  GIT_TAG v1.14.0
-)
-
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-include(GoogleTest)
-
-
+include(GNUInstallDirs)
 
 add_subdirectory(src)
 add_subdirectory(apps)
-add_subdirectory(test)
 
+
+option(BUILD_TESTS "Build tests" ON)
+if (BUILD_TESTS)
+    enable_testing()
+    add_subdirectory(test)
+endif()
+
+
+
+### CPACK ###
+
+set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
+set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${PROJECT_DESCRIPTION})
+set(CPACK_GENERATOR "DEB")
+
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Sleiphan Dawn")
+set(CPACK_DEBIAN_PACKAGE_SECTION "libdevel")
+
+set(CPACK_DEB_COMPONENT_INSTALL ON)
+set(CPACK_COMPONENTS_ALL runtime dev)
+
+set(CPACK_DEBIAN_RUNTIME_PACKAGE_NAME "lib${PROJECT_NAME}${PROJECT_VERSION_MAJOR}")
+set(CPACK_DEBIAN_DEV_PACKAGE_NAME "lib${PROJECT_NAME}-dev")
+
+include(CPack)
