--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,9 @@ on:
       - "v*"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -78,4 +81,4 @@ jobs:
           git config user.email actions@github.com
           git add .
           git commit -m "Update repo for $GITHUB_REF_NAME" || true
-          git push -f --quiet
+          git push
