--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,6 +79,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email actions@github.com
+          rm -rf artifacts
           git add .
           git commit -m "Update repo for $GITHUB_REF_NAME" || true
           git push
